# llm-das-dinomaly

./: .gitignore  .gitmodules  AGENTS.md  README.md  deep-research-report.md  pyproject.toml
configs/: default.yaml  server_mpdd.yaml  server_mvtec.yaml  server_paths.example.env  server_paths_mpdd.example.env  server_paths_visa.example.env  server_visa.yaml
docs/: ARCHITECTURE.md  COMPLETION_AUDIT.md  DINOMALY_WRAPPER_API.md  EXPERIMENT_PLAN.md
docs/brainstorms/: 2026-06-08-few-shot-rotation-augmentation-requirements.md
docs/plans/: 2026-06-08-001-feat-few-shot-rotation-pipeline-plan.md  2026-06-11-001-feat-enhancer-evidence-sweep-plan.md
llm_das_dinomaly/: AGENTS.md  __init__.py
llm_das_dinomaly/data/: __init__.py  cache.py  mpdd.py  mvtec.py  visa.py
llm_das_dinomaly/enhancer/: __init__.py  features.py  fusion.py  heads.py  map_feature_head.py
llm_das_dinomaly/evaluation/: __init__.py  metrics.py  mvtec.py
llm_das_dinomaly/integrations/: __init__.py  dinomaly.py
llm_das_dinomaly/llm/: __init__.py  prompt_templates.py  records.py
llm_das_dinomaly/pipelines/: __init__.py  server_mvtec.py
scripts/: AGENTS.md  generate_hard_samples.py  infer_fused.py  reproduce_dinomaly.sh  run_server_mpdd.sh  run_server_mvtec.sh  run_server_visa.sh  summarize_enhancer_evidence.py  train_enhancer.py
tests/: test_cache_and_llm_records.py  test_config_and_mvtec.py  test_enhancer.py  test_enhancer_evidence_report.py  test_metrics.py  test_mvtec_evaluation.py  test_progress.py  test_server_pipeline.py  test_synth_search.py  test_wrapper.py
(+16 files in other folders)
